--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,22 @@
+@import url("https://fonts.google.com/share?selection.family=Raleway:ital,wght@0,100..900;1,100..900");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Telefon", Sans-Serif;
+  font-weight: 400;
 
-/* .react-codemirror2>.CodeMirror:first-child {
-  display: none;
-} */
+}
+
+.radius {
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+
+.codeMirror {
+  width: 100% !important;
+}
